trunk/Archive2/09/bd6e6984d59447/output
main.cpp:15:3: error: no matching function for call to 'callPrintfLike'
  callPrintfLike<"%d %lf\n">(1, 2.0);                                                                                                                                                               
  ^~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:8:5: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'format'
int callPrintfLike(Rest&&... rest)                                                                                                                                                                  
    ^
1 error generated.
